kustomization/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database-service
  namespace: wordpress
spec:
  ports:
  - name: database
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: database
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress-service
  namespace: wordpress
spec:
  ports:
  - name: wordpress
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
  type: ClusterIP
