kustomization/base/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wordpress-ingress
  namespace: wordpress
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
